[1.80] sync - openssh/specs.html

--- a/openssh/specs.html
+++ b/openssh/specs.html
@@ -142,9 +142,13 @@
     <td>Increase Diffie-Hellman Modulus Size
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8308">RFC8308</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.2>7.2</a>-
+    <td><a href=https://openssh.com/releasenotes.html#7.2>7.2</a>-,
+        <a href=https://openssh.com/releasenotes.html#7.6>7.6</a>-
     <td>Extension Negotiation in the Secure Shell (SSH) Protocol
-        (<code>ext-info-s</code>, <code>ext-info-c</code>)
+        (<code>ext-info-c</code>
+        added in <a href=https://openssh.com/releasenotes.html#7.2>7.2</a>,
+         <code>ext-info-s</code>
+        added in <a href=https://openssh.com/releasenotes.html#9.6>9.6)
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8332">RFC8332</a>
     <td><a href=https://openssh.com/releasenotes.html#7.2>7.2</a>-
