[1.294] 7.6 update - amd64.html

--- a/amd64.html
+++ b/amd64.html
@@ -58,7 +58,8 @@ OpenBSD/amd64 работает на процессорах семейства AM
 <p>
 Постоянно появляется новое оборудование, часть из которого может
 не поддерживаться. Ваша
-<a href="https://www.openbsd.org/donations.html">помощь пожертвованием времени, оборудования или документации</a>
+<a href="https://www.openbsd.org/donations.html">
+помощь пожертвованием времени, оборудования или документации</a>
 может ускорить появление этой поддержки!
 
 <hr>
@@ -69,9 +70,9 @@ OpenBSD/amd64 работает на процессорах семейства AM
 
 <p>
 Последним поддерживаемым релизом OpenBSD/amd64 является
-<a href="https://www.openbsd.org/75.html">OpenBSD 7.5</a>.
+<a href="https://www.openbsd.org/76.html">OpenBSD 7.6</a>.
 Вот
-<a href="https://ftp.openbsd.org/pub/OpenBSD/7.5/amd64/INSTALL.amd64">
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.6/amd64/INSTALL.amd64">
 инструкции по установке OpenBSD/amd64</a>.
 
 <p>
@@ -86,7 +87,7 @@ OpenBSD/amd64 работает на процессорах семейства AM
 <p>
 Предоставляется несколько установочных носителей:
 <ul>
-  <li><strong>CD образ</strong> (install75.iso)
+  <li><strong>CD образ</strong> (install76.iso)
   <br>
   CD ISO предоставляет загрузочный образ <i>El Torito</i> без эмуляции,
   включающий практически все драйверы OpenBSD.
@@ -94,11 +95,11 @@ OpenBSD/amd64 работает на процессорах семейства AM
   и клавиатурa).<br>
   Список свежих драйверов этого образа можно найти в файле конфигурации ядра
   <a href="https://cvsweb.openbsd.org/src/sys/arch/amd64/conf/RAMDISK_CD?rev=HEAD">RAMDISK_CD</a>
-  <li><strong>Образ диска</strong> (miniroot75.img)
+  <li><strong>Образ диска</strong> (miniroot76.img)
   <br>
   Тот же установщик, что и CD ISO образ, но в форме, подходящей для создания
   загружаемых жестких дисков или USB накопителей.
-  <li><strong>Дискета (floppy A)</strong> (floppy75.img)
+  <li><strong>Дискета (floppy A)</strong> (floppy76.img)
   <br>
   Этот образ дискеты размером 1,44 МБ содержит наиболее распространенные
   драйверы. Он создан для наиболее типичного ПК. Как правило,
