[1.762] 7.6 update - index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
 	<li><a href="faq/index.html">FAQ</a>
 	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata75.html">Патчи</a>
+	<li><a href="https://www.openbsd.org/errata76.html">Патчи</a>
 	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -68,8 +68,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/75.html">
-	<img src="images/puffy75.gif" alt="[OpenBSD 7.5]" height=198 width=599>
+	<a href="https://www.openbsd.org/76.html">
+	<img src="images/puffy76.gif" alt="[OpenBSD 7.6]" height=198 width=599>
 	</a>
 </h2>
 
@@ -95,8 +95,8 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/75.html">OpenBSD 7.5</a>,
-вышла 5 апреля 2024 года. Это 56'й релиз.
+<a href="https://www.openbsd.org/76.html">OpenBSD 7.6</a>,
+вышла 8 октября 2024 года. Это 57'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
