--- a/openssh/specs.html
+++ b/openssh/specs.html
@@ -5,7 +5,7 @@
 <title>OpenSSH: Спецификации</title>
 <meta name="description" content="the OpenSSH specifications page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://www.openssh.com/specs.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/openssh/specs.html">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
 <h2 id=OpenBSD>
@@ -86,8 +86,8 @@
     <td><a href=https://tools.ietf.org/html/rfc4345>RFC4345</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=4345"
       title="errata">(e)</a>
-    <td><a href=https://openssh.com/releasenotes.html#4.1>4.1</a
-        >-<a href=https://openssh.com/releasenotes.html#7.6>7.6</a>
+    <td><a href=releasenotes.html#4.1>4.1</a
+        >-<a href=releasenotes.html#7.6>7.6</a>
     <td>Improved Arcfour Modes for the SSH Transport Layer Protocol
   <tr>
     <td><a href=https://tools.ietf.org/html/rfc4419>RFC4419</a>
@@ -117,41 +117,41 @@
     <td><a href=https://tools.ietf.org/html/rfc6594>RFC6594</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=6594"
            title="errata">(e)</a>
-    <td><a href=https://openssh.com/releasenotes.html#6.1>6.1</a>-
+    <td><a href=releasenotes.html#6.1>6.1</a>-
     <td>SHA-256 SSHFP Resource Records
   <tr>
     <td><a href=https://tools.ietf.org/html/rfc6668>RFC6668</a>
-    <td><a href=https://openssh.com/releasenotes.html#5.9>5.9</a>-
+    <td><a href=releasenotes.html#5.9>5.9</a>-
     <td>SHA-2 Data Integrity Algorithms (<code>hmac-sha2-256</code>,
         <code>hmac-sha2-512</code>)
   <tr>
     <td><a href=https://tools.ietf.org/html/rfc7479>RFC7479</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=7479"
            title="errata">(e)</a>
-    <td><a href=https://openssh.com/releasenotes.html#6.5>6.5</a>-
+    <td><a href=releasenotes.html#6.5>6.5</a>-
     <td>ED25519 SSHFP Resource Records
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8160">RFC8160</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.3>7.3</a>-
+    <td><a href=releasenotes.html#7.3>7.3</a>-
     <td>IUTF8 Terminal Mode
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8270">RFC8270</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=8270"
            title="errata">(e)</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.2>7.1</a>-
+    <td><a href=releasenotes.html#7.2>7.1</a>-
     <td>Increase Diffie-Hellman Modulus Size
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8308">RFC8308</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.2>7.2</a>-,
-        <a href=https://openssh.com/releasenotes.html#7.6>7.6</a>-
+    <td><a href=releasenotes.html#7.2>7.2</a>-,
+        <a href=releasenotes.html#7.6>7.6</a>-
     <td>Extension Negotiation in the Secure Shell (SSH) Protocol
         (<code>ext-info-c</code>
-        added in <a href=https://openssh.com/releasenotes.html#7.2>7.2</a>,
+        added in <a href=releasenotes.html#7.2>7.2</a>,
          <code>ext-info-s</code>
-        added in <a href=https://openssh.com/releasenotes.html#9.6>9.6)
+        added in <a href=releasenotes.html#9.6>9.6)
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8332">RFC8332</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.2>7.2</a>-
+    <td><a href=releasenotes.html#7.2>7.2</a>-
     <td>Use of RSA Keys with SHA-2 (<code>rsa-sha2-256</code>,
         <code>rsa-sha2-512</code>)
 
@@ -159,11 +159,11 @@
     <td><a href="https://tools.ietf.org/html/rfc8709">RFC8709</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=8709"
            title="errata">(e)</a>
-    <td><a href=https://openssh.com/releasenotes.html#6.5>6.5</a>-
+    <td><a href=releasenotes.html#6.5>6.5</a>-
     <td>Ed25519 and Ed448 Public Key Algorithms (<code>ssh-ed25519</code> only)
   <tr>
     <td><a href="https://tools.ietf.org/html/rfc8731">RFC8731</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.3>7.3</a>-
+    <td><a href=releasenotes.html#7.3>7.3</a>-
     <td>Key Exchange Method Using Curve25519 and Curve448
         (<code>curve25519-sha256</code> only)
 </table>
@@ -182,27 +182,27 @@
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-ietf-secsh-filexfer-extensions-00"
       >draft-ietf-secsh-filexfer-extensions-00</a>
-    <td><a href=https://openssh.com/releasenotes.html#9.0>9.0</a>-
+    <td><a href=releasenotes.html#9.0>9.0</a>-
     <td>SFTP extension
       <a href="https://datatracker.ietf.org/doc/html/draft-ietf-secsh-filexfer-extensions-00#section-7"
       ><code>copy-data</code></a>
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-ietf-secsh-filexfer-extensions-00"
       >draft-ietf-secsh-filexfer-extensions-00</a>
-    <td><a href=https://openssh.com/releasenotes.html#9.1>9.1</a>-
+    <td><a href=releasenotes.html#9.1>9.1</a>-
     <td>SFTP extension
       <a href="https://datatracker.ietf.org/doc/html/draft-ietf-secsh-filexfer-extensions-00#section-5"
       ><code>home-directory</code></a>
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-ietf-curdle-ssh-kex-sha2-03"
       >draft-ietf-curdle-ssh-kex-sha2-03</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.3>7.3</a>-
+    <td><a href=releasenotes.html#7.3>7.3</a>-
     <td>Key Exchange (KEX) Method Updates and Recommendations
   <tr>
     <td><a
       href="https://tools.ietf.org/html/draft-ietf-secsh-scp-sftp-ssh-uri-04"
       >draft-ietf-secsh-scp-sftp-ssh-uri-04</a>
-    <td><a href=https://openssh.com/releasenotes.html#7.6>7.6</a>-
+    <td><a href=releasenotes.html#7.6>7.6</a>-
     <td>Uniform Resource Identifier (URI) Scheme for SSH and SFTP (with the
       exception of fingerprint)
 </table>
@@ -327,8 +327,8 @@
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-kampanakis-curdle-pq-ssh-00"
       >draft-kampanakis-curdle-pq-ssh-00</a>
-    <td><a href=https://openssh.com/releasenotes.html#8.0>8.0</a
-      >-<a href=https://openssh.com/releasenotes.html#8.5>8.5</a>
+    <td><a href=releasenotes.html#8.0>8.0</a
+      >-<a href=releasenotes.html#8.5>8.5</a>
     <td>Post-quantum public key algorithms
       (<code>sntrup4591761x25519-sha512@tinyssh.org</code>)
 </table>
