[1.459] fix typo -- security.html

--- a/security.html
+++ b/security.html
@@ -94,7 +94,7 @@ h3 {
 <p>	
 OpenBSD верит в стойкую безопасность. Мы стремимся быть ПЕРВЫМИ в области
 безопасности (если уже не стали ими). Благодаря нашей открытой модели
-разработки, мы имеем абсолютно бескомпромиссный взгяд на вопросы
+разработки, мы имеем абсолютно бескомпромиссный взгляд на вопросы
 безопасности, в отличие от большинства других проектов. Мы можем делать такие
 изменения, на которые другие не пошли бы. Кроме того, благодаря
 <a href="crypto.html">криптографии</a>, используемой в OpenBSD, у нас
@@ -121,16 +121,16 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 
 <p>	
 От шести до двенадцати человек составляют команду, которая занимается
-поиском и исправлением ошибки в нашем репозитории. Мы проводим аудит с
-лета 1996г. Процесс по улучшению безопасности охватывает все части системы,
+поиском и исправлением ошибок в нашем репозитории. Мы проводим аудит с
+лета 1996&nbsp;г. Процесс по улучшению безопасности охватывает все части системы,
 файл за файлом мы анализируем каждый компонент программы. Мы не столько
 ищем ошибки безопасности, сколько простые программные ошибки. Если
 спустя годы кто-то обнаружит уязвимость, у нас она скорее всего уже
 будет исправленна, так как причиной уязвимости скорее всего была
 обычная ошибка в коде. Те или иные проблемы были найдены в процессе
 аудита почти в каждом компоненте системы. Были найдены совершенно
-новые категории проблем безопасности, и часто исходной код, который
-уже прошёл аудит, нуждался в дополнительной перепроверке. Исходной
+новые категории проблем безопасности, и часто исходный код, который
+уже прошёл аудит, нуждался в дополнительной перепроверке. Исходный
 код обычно проверяется несколько раз разными людьми с разным опытом.
 
 <p>
