[1.155] fix typo -- crypto.html

--- a/crypto.html
+++ b/crypto.html
@@ -32,7 +32,7 @@ h3 {
 <p>
 <a href="https://www.openbsd.org/ECL.html">Список контроля за экспортом Канады</a>
 не накладывает существенных ограничений на ПО с криптосистемами,
-более того - определён по отношению к экспорту свободно-распространяемых
+более того &mdash; определён по отношению к экспорту свободно-распространяемых
 криптосистем. Marc Plumb провёл
 <a href="http://www.efc.ca/pages/doc/crypto-export.html">
 некоторые исследования о законодательствах, касающихся криптографии</a>.
@@ -49,7 +49,7 @@ h3 {
 
 <p>
 OpenBSD была первой операционной системой, распространяемой со стеком
-IPsec. OpenBSD включает IPsec начиная с версии 2.1, вышедьшей в 1997 году.
+IPsec. OpenBSD включает IPsec начиная с версии 2.1, вышедшей в 1997 году.
 
 <h3 id="ssh">OpenSSH</h3>
 
