[1.559] fix typo -- faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -481,7 +481,7 @@ fontconfig, используются программами для работы 
 <p>
 Добавление firmware на установочный носитель не активирует оборудование
 во время процесса установки.
-Они будут установленны (скопированны,добавлены) на диск, куда устанавливается
+Они будут установленны (скопированны, добавлены) на диск, куда устанавливается
 система, поэтому оборудование можно будет использовать сразу после
 ее первой загрузки.
 
@@ -549,7 +549,7 @@ and GENERIC kernels are appreciated.)  The device driver information we get from
 this helps us fix existing drivers. Thank you!
 </pre>
 
-Или просто сохрание вывод dmesg в каком-нибудь текстовом файле и отпавьте нам
+Или просто сохраните вывод dmesg в каком-нибудь текстовом файле и отпавьте нам
 его содержание:
 
 <pre class="cmdbox">
@@ -629,7 +629,7 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 
 <p>
 <a href="https://www.rodsbooks.com/refind/">rEFInd</a>, как нам известно по
-сообщениям пользователей. обычно работет без проблем.
+сообщениям пользователей. обычно работает без проблем.
 <a href="https://www.gnu.org/software/grub/">GRUB</a>, по сообщениям от
 пользователей, как правило работает не совсем правильно.
 Так или иначе, вы в праве сами решать что и как хотите использовать.
