[1.251] fix typo -- faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -53,9 +53,6 @@ FAQ - Введение в OpenBSD
   <li>OpenBSD извлекает выгоду из сильного постоянного развития во многих
   областях, предлагая возможности работать с появляющимися технологиями и
   международным сообществом разработчиков и конечных пользователей.
-  OpenBSD benefits from strong ongoing development in many areas, offering
-      opportunities to work with emerging technologies and an international
-      community of developers and end users.
   <li>OpenBSD пытается свести к минимуму необходимость настройки.
       Для подавляющего большинства пользователей OpenBSD <b>просто работает</b>
       на их аппаратном обеспечении для их нужд.
@@ -114,7 +111,7 @@ OpenBSD распространяется с рядом сторонних про
 
 <h3 id="Next">Когда будет следующий релиз?</h3>
 
-Команда OpenBSD выпускает новый примерно каждые шесть месяцев с цедевыми
+Команда OpenBSD выпускает новый примерно каждые шесть месяцев с целевыми
 датами в мае и ноябре. Больше информации о цикле разработки можно найти
 <a href="faq5.html#Flavors">здесь</a>.
 
@@ -169,7 +166,7 @@ OpenBSD поставляется с обширной документацией 
   - добавление или удаление новых пользователей
   <li><a href="https://man.openbsd.org/reboot">reboot(8), halt(8)</a> и
   <a href="https://man.openbsd.org/shutdown">shutdown(8)</a>
-  - остановка и перезагрузки системы
+  - остановка и перезагрузка системы
   <li><a href="https://man.openbsd.org/syspatch">syspatch(8)</a>
   - загрузка <a href="faq10.html#Patches">обновлений безопасности</a>
   <li><a href="https://man.openbsd.org/sysupgrade">sysupgrade(8)</a>
@@ -323,7 +320,7 @@ $ <b>man 5 crontab</b>
       Другими словами, нет устройств <code>eth0</code> и <code>eth1</code>.
       Это будет <code>em0</code> для карты Intel PRO/1000 Ethernet,
       <code>bge0</code> для устройства Broadcom BCM57xx или BCM590x Ethernet,
-      <code>ral0</code> для беспроводного устройства RaLink и т. Д.
+      <code>ral0</code> для беспроводного устройства RaLink и т.д.
   <li>OpenBSD/i386, amd64 и несколько других платформ используют
       двухслойную систему разбиения диска, где первый уровень -
       это раздел видимый в BIOS c помощью <a href="faq14.html#fdisk">fdisk</a>,
@@ -434,8 +431,7 @@ Thank you!
       <a href="https://www.openbsd.org/groups.html">группу пользователей</a>
       показать друзьям на сколько OpenBSD классная система.
   <li>Обратиться к работодателю с просьбой использовать OpenBSD
-      для работы.
-      Если вы студент, то обсудить с преподавателями возможность
+      для работы. Если вы студент, то обсудить с преподавателями возможность
       использования OpenBSD в качестве учебного инструмента для
       компьютерных или инженерных курсов.
 </ul>
