[1.559] fix typo -- faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -129,15 +129,15 @@ boot> <b>boot hd1d:/bsd.rd</b>
 	  заранее, требует ли ваша карта firmware?
 	  Если это так, ознакомьтесь с материалом <a href="#WifiOnly">bootstrapping wireless firmware</a>.
     </ul>
-  <li>Какой метод установки будет испрользоваться
+  <li>Какой метод установки будет использоваться
   <li>Желаемая разметка диска:
     <ul>
       <li>Нужно ли будет сохранять где-то какие-то данные, существующие в системе?
-      <li>Установленна (или будет ли установленна в будущем) на машине какая-то другая ОС?
+      <li>Установлена (или будет ли установлена в будущем) на машине какая-то другая ОС?
         Если да, то как именно они должны загружаться?
-        Понадобиться ли установка boot manager?
+        Понадобится ли установка boot manager?
       <li>Будет ли использоваться весь диск для OpenBSD, или вы хотите использовать
-        существующую разметку и использовать один из доступных разделов?
+        существующую разметку и один из доступных разделов?
       <li>Как вы хотите разметить часть диска, предназначенного для OpenBSD?
       <li>Хотите ли зашифровать диск?
     </ul>
