[1.559] fix typo -- faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -473,7 +473,7 @@ fontconfig, используются программами для работы 
 
 <p>
 В некоторых случаях нет возможности подключиться к интернет, например если
-на ноутбуке нет порта Ethernet. В этом случае пользователю придется вручную
+на ноутбуке нет порта ethernet. В этом случае пользователю придется вручную
 загрузить и установить firmware, чтобы подключиться к интернет.
 Это можно сделать перед установкой, добавив файлы с firmware на установочный
 носитель или после установки ОС с CD или жеского диска.
@@ -481,9 +481,9 @@ fontconfig, используются программами для работы 
 <p>
 Добавление firmware на установочный носитель не активирует оборудование
 во время процесса установки.
-Они будут установленны (скопированны, добавлены) на диск, куда устанавливается
+Они будут установлены (скопированы, добавлены) на диск, куда устанавливается
 система, поэтому оборудование можно будет использовать сразу после
-ее первой загрузки.
+её первой загрузки.
 
 <p>
 Начать стоит с поиска
