[1.165] fix typo, wording -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -34,22 +34,22 @@ FAQ - Управление клавиатурой и дисплеем
   <li><a href="#AddConsole"   >Добавление виртуальных консолей</a>
   <li><a href="#Size80x50"    >Изменение шрифтов и разрешения консоли</a>
   </ul>
-<li><a href="#Blanker"        >Отчистка неактивной консоли</a>
+<li><a href="#Blanker"        >Очистка неактивной консоли</a>
 <li><a href="#SerCon"         >Последовательный порт для доступа к консоли</a>
 </ul>
 <hr>
 
 <h2 id="Consoles">Работа в консоли</h2>
 
-<h3 id="Keyboard">Переназначить клавиши на клавиатуре</h3>
+<h3 id="Keyboard">Переназначение клавиш</h3>
 
 Утилита <a href="https://man.openbsd.org/kbd">kbd(8)</a> может быть
 использована для изменений кодировки клавиатуры.
 Большинством настроек клавиатуры можно управлять при помоши утилиты
 <a href="https://man.openbsd.org/wsconsctl">wsconsctl(8)</a>.
-К примеру, чтобы переназначить клавиши (to change keymappings) при помощи
+К примеру, чтобы переназначить клавиши при помощи
 <a href="https://man.openbsd.org/wsconsctl">wsconsctl(8)</a>,
-сделайте следующее:
+выполните:
 
 <pre class="cmdbox">
 # <b>wsconsctl keyboard.encoding=uk</b>
@@ -73,7 +73,6 @@ FAQ - Управление клавиатурой и дисплеем
 <a href="https://man.openbsd.org/wsmoused">wsmoused(8)</a>.
 Его можно включить при помощи утилиты <a href="https://man.openbsd.org/rcctl">rcctl(8)</a>,
 <a href="faq10.html#rc">описанной в FAQ</a>.
-
 
 <h3 id="SwitchConsole">Переключение между консолями</h3>
 
@@ -136,7 +135,7 @@ FAQ - Управление клавиатурой и дисплеем
 Затем мы удаляем и создаем заново виртуальную консоль с нужным разрешением
 экрана, используя  <a href="https://man.openbsd.org/wsconscfg">wsconscfg(8)</a>.
 Это можно сделать автоматически при загрузке, добавив следующие команды в
-конец <a href="https://man.openbsd.org/rc.local">rc.local(8)</a> скрипта:
+конец скрипта <a href="https://man.openbsd.org/rc.local">rc.local(8)</a>:
 
 <pre class="cmdbox">
 wsfontload -h 8 -e ibm /usr/share/misc/pcvtfonts/vt220l.808	# load 8x8 font
@@ -144,33 +143,32 @@ wsconscfg -dF 5			# delete screen 5 accessed by [CTRL]+[ALT]+[F6]
 wsconscfg -t 80x50 5		# add screen 5 with 50 lines of 80 characters
 </pre>
 
-Если вы хотите изменить другие screens, просто повторите шаги удаления и
-добавления экрана для других экранов. Невозможно изменить разрешение основного
-консольного устройства <code>ttyC0</code>, доступ к которому осуществляется при
-помощью <code>[CTRL]+[ALT]+[F1]</code>. Избегайте изменения экрана 4, который
-используется X в качестве графического экрана.
+Если вы хотите изменить разрешение экрана и других виртуальных консолей, 
+просто повторите для них шаги удаления и добавления. 
+Невозможно изменить разрешение основного консольного устройства <code>ttyC0</code>, 
+доступ к которому осуществляется при помощи <code>[CTRL]+[ALT]+[F1]</code>. 
+Избегайте изменения экрана 4, используемого X в качестве графического экрана.
 
-<h2 id="Blanker">Отчистка неактивной консоли</h2>
+<h2 id="Blanker">Очистка неактивной консоли</h2>
 
 Если вы хотите, чтобы экран отключался после определенного периода неактивности
-консоли (без использования X), можете установить следующие параметры
+консоли (без использования X), можете использовать следующие параметры
 <a href="https://man.openbsd.org/wscons">wscons(4)</a>:
 
 <ul>
   <li><b><code>display.screen_off</code></b>
     определяет время в тысячных долях секунды, после которых экран будет погашен.
   <li><b><code>display.kbdact</code></b>
-    установка этого параметра как <code>on</code>, делает возможным пробудить
-    экран при любой активности с клавиатуры.
+    если установлен как <code>on</code>, то экран будет пробуждаться при вводе 
+    с клавиатуры.
   <li><b><code>display.msact</code></b>
-    установка этого параметра как <code>on</code>, приведет к тому, что экран
-    будет пробуждаться при любой активности <a href="#ConsoleMouse" >конольной мыши</a>.
+    если установлен как <code>on</code>, то экран будет пробуждаться при активности 
+    <a href="#ConsoleMouse">консольной мыши</a>.
   <li><b><code>display.outact</code></b>
-    установка этого парамерта как <code>on</code> обозначает, что экран будет
-    просыпаться, если на экран будет выведенно что-то новое.
+    если установлен как <code>on</code>, то экран будет пробуждаться при обновлении
+    содержимоого.
   <li><b><code>display.vblank</code></b>
-    установка этого параметра как <code>on</code> отключает вертикальное обновление
-    экрана.
+    установка этого параметра как <code>on</code> отключает вертикальную сихронизацию. 
     Это приведет к тому, что многие мониторы перейдут в режим энергосбережения.
 </ul>
 
@@ -182,19 +180,19 @@ wsconscfg -t 80x50 5		# add screen 5 with 50 lines of 80 characters
 display.screen_off -> 60000
 </pre>
 
-или установить их перманентно (изменения вступят в силу после перезагрузки),
+или сделать их постоянными (изменения вступят в силу после перезагрузки),
 отредактировав
 <a href="https://man.openbsd.org/wsconsctl.conf">wsconsctl.conf(5)</a>.
 Отключение экрана активируется лишь в том случае, если одна из двух переменных
-<code>display.kbdact</code> или <code>display.outact</code> установленна как
-<code>on</code>. Еще одно замечание - одна из них должна быть <code>off</code>.
+<code>display.kbdact</code> или <code>display.outact</code> установлена как
+<code>on</code>. Еще одно замечание - одна из двух должна быть <code>off</code>.
 
-<h2 id="SerCon">Последовательный порт для доступа к консоли</h2>
+<h2 id="SerCon">Настройка последовательного порта</h2>
 
-OpenBSD поддерживает работу консоли через последовательный порт на большенстве
-платформ, однако существуют различия в ее работе на разных платфомах.
+OpenBSD поддерживает работу консоли через последовательный порт на большинстве
+платформ, однако существуют различия в её работе на разных платформах.
 Помимо того, что пользователи могут таким образом входить в систему,
-они также могут быть использованы для записи вывода с консоли.
+последовательный порт может быть использован вывода с консоли.
 
 <p>
 Использование полноценной последовательной консоли в OpenBSD состоит
@@ -211,7 +209,7 @@ OpenBSD поддерживает работу консоли через посл
 
 <h3 id="SerContty">Настройка возможности входа в систему через <code>/etc/ttys</code></h3>
 
-Поведением терминалов в OpenBSD контролирется файлом
+Поведение терминалов в OpenBSD контролируется в файле
 <a href="https://man.openbsd.org/ttys">ttys(5)</a>. Для того, чтобы появилось
 приглашение для входа в систему <code>login:</code>, его необходимо включить
 в <code>/etc/ttys</code>. Последовательный терминал (serial terminal) по
@@ -229,19 +227,18 @@ tty00   "/usr/libexec/getty std.9600"   unknown off
 tty00   "/usr/libexec/getty std.9600"   vt220   on secure
 </pre>
 
-Здесь <code>tty00</code> - это последовательный порт, который мы используем
+Здесь <code>tty00</code> - это последовательный порт, используемый
 в качестве консоли, а <code>vt220</code> - запись в
 <a href="https://man.openbsd.org/termcap.5">termcap(5)</a>, соответствующая
 вашему терминалу. Другие возможные варианты могут включать <code>vt100</code>,
 <code>xterm</code> и т.д. Параметр <code>on</code> включает приглашение
-для входа в систему, активируя
-<a href="https://man.openbsd.org/getty">getty(8)</a>
+для входа в систему, активируя <a href="https://man.openbsd.org/getty">getty(8)</a>
 для этого последовательного порта. Параметр <code>secure</code> разрешает
 вход в систему пользователю <code>root</code> на этой консоли.
-И наконец, параметр <code>9600</code> - это скорость для этого терминала.
+И наконец, <code>9600</code> - это скорость для этого терминала.
 
 <p>
-Обратите внимание, что вы можете использовать последовательную консоль
+Обратите внимание, вы можете использовать последовательную консоль
 (serial console) для установки системы без выполнения этого шага, так как
 система работает в однопользовательском режиме и не использует
 <code>getty</code> для входа в систему.
@@ -267,8 +264,8 @@ set tty com0
 нужна скорость передачи данных, отличная от 9600bps.
 
 <p>
-Некоторые системы могут работать без видеокарты. Некоторые считают это
-условием ошибки. Другие способны перенаправлять все действия клавиатуры
+Некоторые системы могут работать без видеокарты, другие считают это
+условием ошибки. Некоторые способны перенаправлять все действия клавиатуры
 и экрана BIOS на последовательный порт с помощью параметра конфигурации,
 поэтому можно полностью обслуживать машину через последовательный порт.
 Ваши результаты могут отличаться.
@@ -281,9 +278,9 @@ set tty com0
 создать и работать со своими собственными консолями.
 
 <p>
-Чтобы испрользовать машину в многопользовательском режиме, вам
+Чтобы использовать машину в многопользовательском режиме, вам
 понадобится отредактировать файл <code>/etc/ttys</code> как
-<a href="#SerContty">рассказывалось выше</a>.
+<a href="#SerContty">описано выше</a>.
 
 <h3>sparc64</h3>
 
@@ -307,8 +304,8 @@ Forth, останавливая в этот момент любое прилож
 Проверьте это, прежде чем использовать на критически важных машинах.
 
 <p>
-Если клавиатура и монитор подключены, вы все равно можете принудительно
-использовать последовательную консоль, используя следующие команды в
+Если клавиатура и монитор подключены, вы всё равно можете принудительно
+использовать последовательную консоль, применив следующие команды в
 <code>ok</code> prompt:
 
 <pre class="cmdbox">
@@ -317,8 +314,8 @@ ok <b>setenv output-device ttya</b>
 ok <b>reset</b>
 </pre>
 
-Если <code>ttyC0</code> активирован в <code>/etc/ttys</code>, как
-<a href="#SerContty">описано выше</a>, вы можете использовать клавиатуру
+Если <code>ttyC0</code> активирован в <code>/etc/ttys</code>, как описано
+<a href="#SerContty">выше</a>, вы можете использовать клавиатуру
 и монитор в X.
 
 <h3>macppc</h3>
@@ -335,18 +332,17 @@ ok <b>reset-all</b>
 Установите последовательную консоль на 57600bps, 8N1.
 
 <p>
-К сожалению, последовательная консоль на большинстве MacPPC напрямую невозможна.
-Хотя большинство этих машин имеют serial hardware, оно недоступно из вне
-(it isn't accessible outside the machine). К счастью, несколько компаний
-предлагают дополнительные устройства для нескольких моделей Macintosh,
-которые сделают этот порт доступным для использования через последовательную
-консоль.
+К сожалению, использование последовательной консоли на большинстве MacPPC
+напрямую невозможно. Хотя большинство этих машин имеют поддержку 
+последовательного порта, снаружи он недоступен. К счастью, для нескольких 
+моделей Macintosh, существуют дополнительные устройства, позволяющие 
+использовать порт в качестве последовательной консоли.
 
 <p>
 Вы должны использовать параметр <code>on</code> для <code>tty00</code>
 в <code>/etc/ttys</code> и установить скорость 57600 вместо 9600 (значение
 по умолчанию), как описано <a href="#SerContty">выше</a> в однопользовательском
-режиме, прежде чем перезагрузиться в многопользовательском режиме и иметь
+режиме, прежде чем перезагрузиться в многопользовательский режим и иметь
 возможность работать с последовательной консолью.
 
 <h3>Что делать при I/O ошибках во время работы с tty</h3>
