[1.165] some changes -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -151,7 +151,7 @@ wsconscfg -t 80x50 5		# add screen 5 with 50 lines of 80 characters
 
 <h2 id="Blanker">Очистка неактивной консоли</h2>
 
-Если вы хотите, чтобы экран отключался после определенного периода неактивности
+Если вы хотите, чтобы экран отключался после некоторого периода неактивности
 консоли (без использования X), можете использовать следующие параметры
 <a href="https://man.openbsd.org/wscons">wscons(4)</a>:
 
@@ -159,14 +159,14 @@ wsconscfg -t 80x50 5		# add screen 5 with 50 lines of 80 characters
   <li><b><code>display.screen_off</code></b>
     определяет время в тысячных долях секунды, после которых экран будет погашен.
   <li><b><code>display.kbdact</code></b>
-    если установлен как <code>on</code>, то экран будет пробуждаться при вводе 
+    если установлен как <code>on</code>, экран будет пробуждаться при вводе 
     с клавиатуры.
   <li><b><code>display.msact</code></b>
-    если установлен как <code>on</code>, то экран будет пробуждаться при активности 
+    если установлен как <code>on</code>, экран будет пробуждаться при активности 
     <a href="#ConsoleMouse">консольной мыши</a>.
   <li><b><code>display.outact</code></b>
-    если установлен как <code>on</code>, то экран будет пробуждаться при обновлении
-    содержимоого.
+    если установлен как <code>on</code>, экран будет пробуждаться при обновлении
+    содержимого.
   <li><b><code>display.vblank</code></b>
     установка этого параметра как <code>on</code> отключает вертикальную сихронизацию. 
     Это приведет к тому, что многие мониторы перейдут в режим энергосбережения.
@@ -199,7 +199,7 @@ OpenBSD поддерживает работу консоли через посл
 из двух частей:
 
 <ul>
-  <li>Позволяет использовать последовательный порт в качестве интерактивного
+  <li>Использование последовательного порта в качестве интерактивного
       терминала, чтобы пользователь мог войти в него при работе в
       многопользовательском режиме.
   <li>Можно настроить OpenBSD для использования последовательного порта в
@@ -240,18 +240,17 @@ tty00   "/usr/libexec/getty std.9600"   vt220   on secure
 <p>
 Обратите внимание, вы можете использовать последовательную консоль
 (serial console) для установки системы без выполнения этого шага, так как
-система работает в однопользовательском режиме и не использует
-<code>getty</code> для входа в систему.
+в однопользовательском режиме системе не требуется <code>getty</code>.
 
 <p>
-На некоторых платформах и некоторых конфигурациях вы должны перевести
+На некоторых платформах и конфигурациях вы должны перевести
 систему в однопользовательский режим, чтобы сделать это изменение, если
 у вас есть последовательная консоль.
 
 <h3>amd64 и i386</h3>
 
-Для настройки процесса загрузки таким образом, чтобы использовался
-последовательный порт в качестве консоли, файл
+Для настройки процесса загрузки таким образом, с использованием 
+последовательного порта в качестве консоли, файл
 <a href="https://man.openbsd.org/amd64/boot.conf">boot.conf(5)</a>
 должен содержать строку:
 
@@ -265,15 +264,15 @@ set tty com0
 
 <p>
 Некоторые системы могут работать без видеокарты, другие считают это
-условием ошибки. Некоторые способны перенаправлять все действия клавиатуры
+ошибкой. Некоторые способны перенаправлять все действия клавиатуры
 и экрана BIOS на последовательный порт с помощью параметра конфигурации,
 поэтому можно полностью обслуживать машину через последовательный порт.
 Ваши результаты могут отличаться.
 При использовании этой функции некоторые реализации BIOS могут мешать
 загрузчику видеть последовательный порт, поэтому ядро не сможет его
 использовать.
-Может быть опция BIOS "Continue Console Redirection after POST"
-(«Продолжить перенаправление консоли после POST»). Она должна быть
+Опция BIOS "Continue Console Redirection after POST"
+(«Продолжить перенаправление консоли после POST») должна быть
 выключена, т.е. установлена в OFF, чтобы загрузчик и ядро могли
 создать и работать со своими собственными консолями.
 
@@ -286,10 +285,10 @@ set tty com0
 
 Эти машины специально спроектированы таким образом, чтобы с ними легко
 можно было работать при помощи последовательной консоли. Просто отключите
-клавиатуру, и система автоматически будет использовать проследовательный порт.
+клавиатуру, и система автоматически будет использовать последовательный порт.
 
 <p>
-В некоторых системах последовательные порты распознаются системой как
+В некоторых системах последовательные порты распознаются как
 <code>ttya</code>, <code>ttyb</code>, <code>ttyh0</code> или <code>ttyh1</code>.
 Нет необходимости трогать <code>/etc/ttys</code> для использования
 последовательной консоли в многопользовательском режиме.
@@ -298,14 +297,14 @@ set tty com0
 Некоторые системы sparc64 интерпретируют сигнал BREAK на консольном порту
 так же, как команда STOP-A. Это возвращает систему обратно к приглашению
 Forth, останавливая в этот момент любое приложение и операционную систему.
-Это удобно, если подобное происходит по желанию пользователя, но, к
-сожалению, некоторые последовательные терминалы и RS-232 switching devices
-посылают что-то, что компьютер интерпретирует как сигнал об остановке машины.
+Это удобно, если подобное происходит по желанию пользователя, но 
+к сожалению, некоторые последовательные терминалы и RS-232 коммутаторы
+посылают что-то, интерпретируемое компьютером как сигнал об остановке машины.
 Проверьте это, прежде чем использовать на критически важных машинах.
 
 <p>
 Если клавиатура и монитор подключены, вы всё равно можете принудительно
-использовать последовательную консоль, применив следующие команды в
+использовать последовательную консоль, использовав следующие команды в
 <code>ok</code> prompt:
 
 <pre class="cmdbox">
@@ -336,14 +335,14 @@ ok <b>reset-all</b>
 напрямую невозможно. Хотя большинство этих машин имеют поддержку 
 последовательного порта, снаружи он недоступен. К счастью, для нескольких 
 моделей Macintosh, существуют дополнительные устройства, позволяющие 
-использовать порт в качестве последовательной консоли.
+использовать порт как последовательную консоль.
 
 <p>
 Вы должны использовать параметр <code>on</code> для <code>tty00</code>
 в <code>/etc/ttys</code> и установить скорость 57600 вместо 9600 (значение
 по умолчанию), как описано <a href="#SerContty">выше</a> в однопользовательском
-режиме, прежде чем перезагрузиться в многопользовательский режим и иметь
-возможность работать с последовательной консолью.
+режиме, прежде чем перезагрузиться в многопользовательский режим и получить
+возможность работы с последовательной консолью.
 
 <h3>Что делать при I/O ошибках во время работы с tty</h3>
 
