[1.165] some changes -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -192,7 +192,7 @@ display.screen_off -> 60000
 OpenBSD поддерживает работу консоли через последовательный порт на большинстве
 платформ, однако существуют различия в её работе на разных платформах.
 Помимо того, что пользователи могут таким образом входить в систему,
-последовательный порт может быть использован вывода с консоли.
+последовательный порт может быть использован для вывода с консоли.
 
 <p>
 Использование полноценной последовательной консоли в OpenBSD состоит
@@ -203,8 +203,8 @@ OpenBSD поддерживает работу консоли через посл
       терминала, чтобы пользователь мог войти в него при работе в
       многопользовательском режиме.
   <li>Можно настроить OpenBSD для использования последовательного порта в
-      качестве консоли лишь для мониторинга состояния системы и
-      однопользовательского режима. Эта часть сильно зависит от платформы.
+      качестве консоли лишь для мониторинга состояния системы и работы в
+      однопользовательском режиме. Эта часть значительно зависит от платформы.
 </ul>
 
 <h3 id="SerContty">Настройка возможности входа в систему через <code>/etc/ttys</code></h3>
@@ -249,7 +249,7 @@ tty00   "/usr/libexec/getty std.9600"   vt220   on secure
 
 <h3>amd64 и i386</h3>
 
-Для настройки процесса загрузки таким образом, с использованием 
+Для настройки процесса загрузки с использованием 
 последовательного порта в качестве консоли, файл
 <a href="https://man.openbsd.org/amd64/boot.conf">boot.conf(5)</a>
 должен содержать строку:
@@ -258,22 +258,21 @@ tty00   "/usr/libexec/getty std.9600"   vt220   on secure
 set tty com0
 </pre>
 
-Этот файл помещается на ваш загрузочный диск, который также может быть
-вашим install media. Используйте параметр <code>stty</code>, если вам
+Файл помещается на ваш загрузочный диск, который также может быть
+и установочным носителем. Используйте параметр <code>stty</code>, если вам
 нужна скорость передачи данных, отличная от 9600bps.
 
 <p>
-Некоторые системы могут работать без видеокарты, другие считают это
+Часть систем может работать без видеокарты, другая считает это
 ошибкой. Некоторые способны перенаправлять все действия клавиатуры
 и экрана BIOS на последовательный порт с помощью параметра конфигурации,
 поэтому можно полностью обслуживать машину через последовательный порт.
 Ваши результаты могут отличаться.
 При использовании этой функции некоторые реализации BIOS могут мешать
 загрузчику видеть последовательный порт, поэтому ядро не сможет его
-использовать.
-Опция BIOS "Continue Console Redirection after POST"
+использовать. Опция BIOS "Continue Console Redirection after POST"
 («Продолжить перенаправление консоли после POST») должна быть
-выключена, т.е. установлена в OFF, чтобы загрузчик и ядро могли
+выключена (установлена в OFF или Disable), чтобы загрузчик и ядро могли
 создать и работать со своими собственными консолями.
 
 <p>
