[1.165] fix typo -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -35,7 +35,7 @@ FAQ - Управление клавиатурой и дисплеем
   <li><a href="#Size80x50"    >Изменение шрифтов и разрешения консоли</a>
   </ul>
 <li><a href="#Blanker"        >Очистка неактивной консоли</a>
-<li><a href="#SerCon"         >Последовательный порт для доступа к консоли</a>
+<li><a href="#SerCon"         >Настройка последовательного порта</a>
 </ul>
 <hr>
 
