[1.165] fix typo -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -203,7 +203,7 @@ OpenBSD поддерживает работу консоли через посл
       терминала, чтобы пользователь мог войти в него при работе в
       многопользовательском режиме.
   <li>Можно настроить OpenBSD для использования последовательного порта в
-      качестве консоли лишь для мониторинга состояния системы и работы в
+      качестве консоли только для контроля состояния системы и работы в
       однопользовательском режиме. Эта часть значительно зависит от платформы.
 </ul>
 
