[1.165] wording -- faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -152,7 +152,7 @@ wsconscfg -t 80x50 5		# add screen 5 with 50 lines of 80 characters
 <h2 id="Blanker">Очистка неактивной консоли</h2>
 
 Если вы хотите, чтобы экран отключался после некоторого периода неактивности
-консоли (без использования X), можете использовать следующие параметры
+консоли (без использования X), используйте следующие параметры
 <a href="https://man.openbsd.org/wscons">wscons(4)</a>:
 
 <ul>
